z-index fix

--- a/css/universal.css
+++ b/css/universal.css
@@ -33,6 +33,7 @@ a, a:link, a:visited, a:hover, a:active {
     box-shadow: 0px 2px 4px #000000;
     position: fixed;
     top: 0;
+    z-index: 1000;
 }
 
 .container {
